<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="param"
            type="com.mahavira.arcanum.login.domain.entity.AuthParam"/>
        <variable
            name="viewModel"
            type="com.mahavira.arcanum.login.presentation.feature.LoginViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.mahavira.partnersms.login.presentation.LoginActivity"
        android:padding="16dp">

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/login_email_hint"
            android:text="@={param.email}"/>

        <EditText
            android:id="@+id/pass_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_password_hint"
            android:text="@={param.password}"
            app:layout_constraintTop_toBottomOf="@+id/email_et"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_txt"
            android:onClick="@{() -> viewModel.attemptLogin(param)}"
            app:layout_constraintTop_toBottomOf="@id/pass_et"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_btn_txt"
            android:onClick="@{() -> viewModel.goToRegister()}"
            app:layout_constraintTop_toBottomOf="@id/login_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>
